--- a/com.firstlinecode.sand.client/com.firstlinecode.sand.client.things/pom.xml
+++ b/com.firstlinecode.sand.client/com.firstlinecode.sand.client.things/pom.xml
@@ -31,6 +31,10 @@
 			<groupId>com.firstlinecode.sand.protocols</groupId>
 			<artifactId>com.firstlinecode.sand.protocols.actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.firstlinecode.chalk</groupId>
+			<artifactId>com.firstlinecode.chalk</artifactId>
+		</dependency>
 	</dependencies>
 </project>
 
