--- a/com.firstlinecode.sand.emulators/com.firstlinecode.sand.emulators.gateway/pom.xml
+++ b/com.firstlinecode.sand.emulators/com.firstlinecode.sand.emulators.gateway/pom.xml
@@ -46,6 +46,10 @@
 			<artifactId>com.firstlinecode.sand.client.actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.firstlinecode.sand.client</groupId>
+			<artifactId>com.firstlinecode.sand.client.keepalive</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.firstlinecode.sand.emulators</groupId>
 			<artifactId>com.firstlinecode.sand.emulators.light</artifactId>
 		</dependency>
